[gd_scene load_steps=8 format=2]

[ext_resource path="res://combat/CombatArena.gd" type="Script" id=1]
[ext_resource path="res://combat/turn_queue/TurnQueue.tscn" type="PackedScene" id=2]
[ext_resource path="res://combat/interface/CombatInterface.gd" type="Script" id=3]
[ext_resource path="res://combat/interface/SelectArrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/default.theme" type="Theme" id=5]
[ext_resource path="res://combat/interface/OldSchoolUI.gd" type="Script" id=6]
[ext_resource path="res://combat/interface/lifebar/LifebarsBuilder.tscn" type="PackedScene" id=7]

[node name="CombatArena" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node" parent="."]

[node name="Monsters" type="Node" parent="SpawnPositions"]

[node name="Party" type="Node" parent="SpawnPositions"]

[node name="1" type="Position2D" parent="SpawnPositions/Party"]
position = Vector2( 1285.1, 453.096 )

[node name="2" type="Position2D" parent="SpawnPositions/Party"]
position = Vector2( 1376, 672 )

[node name="TurnQueue" parent="." instance=ExtResource( 2 )]
z_index = 10

[node name="CombatInterface" type="CanvasLayer" parent="."]
layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 3 )

[node name="SelectArrow" parent="CombatInterface" instance=ExtResource( 4 )]
position = Vector2( -39, -51 )

[node name="OldSchoolUI" type="Control" parent="CombatInterface"]
visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Row" type="HBoxContainer" parent="CombatInterface/OldSchoolUI"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MonstersPanel" type="Panel" parent="CombatInterface/OldSchoolUI/Row"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 634.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Column" type="VBoxContainer" parent="CombatInterface/OldSchoolUI/Row/MonstersPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="PartyPanel" type="Panel" parent="CombatInterface/OldSchoolUI/Row"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 650.0
margin_right = 1920.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0

[node name="Column" type="VBoxContainer" parent="CombatInterface/OldSchoolUI/Row/PartyPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Control" type="Control" parent="CombatInterface/OldSchoolUI/Row/PartyPanel/Column"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="HSeparator" type="HSeparator" parent="CombatInterface/OldSchoolUI/Row/PartyPanel/Column"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="LifebarsBuilder" parent="CombatInterface" instance=ExtResource( 7 )]

